# dbus-service

./: .clang-format  .gitignore  README.md  changeConfig.sh  main.cpp  meson.build  test.cpp
cfgBuilder/: BaseBuilder.cpp  BaseBuilder.h  BuilderSolution.h  CompositeBuilder.h  DbusObjectBuilder.cpp  DbusObjectBuilder.h  ServiceBuilder.cpp  ServiceBuilder.h  ServiceDirector.cpp  meson.build
cfgRead/: BaseReader.h  ConcreteReader.cpp  ConcreteReader.h  ReaderFactory.h  ReaderFactory.hpp  meson.build
client/: client.cpp  meson.build
client/adapters/: configurationProxy.h
client/objects/: BaseProxy.cpp  BaseProxy.h  TimeoutProxy.cpp  TimeoutProxy.h
client/proxies/: configurationProxy.xml
client/proxiesBuilder/: ProxiesBuilder.cpp  ProxiesBuilder.h  ProxiesDirector.cpp  ProxiesDirector.h  meson.build
client/proxiesComposite/: ProxyComposite.cpp  ProxyComposite.h  meson.build
client/proxiesManager/: ProxiesManager.cpp  ProxiesManager.h  meson.build
client/proxy-objects/: BaseProxy.cpp  BaseProxy.h  TimeoutProxy.cpp  TimeoutProxy.h  meson.build
client/proxy-objects/adapters/: configurationProxy.h
client/proxyReader/: BaseProxyReader.h  PathTypeJsonReader.cpp  PathTypeJsonReader.h  meson.build
client_settings/: settings.json
common/: Config.cpp  Config.h  Exceptions.cpp  Exceptions.h  ObjectInfoStorage.cpp  ObjectInfoStorage.h  cfgDefines.h  concepts.h  meson.build
daemon/: daemon.cpp  meson.build
daemon/cfgBuilder/: DbusObjectBuilder.cpp  DbusObjectBuilder.h  ServiceBuilder.cpp  ServiceBuilder.h  ServiceDirector.cpp  ServiceDirector.h  meson.build
daemon/cfgRead/: BaseReader.h  ConcreteReader.cpp  ConcreteReader.h  meson.build
daemon/dbus-objects/: BaseDbusObject.cpp  BaseDbusObject.h  TimeoutObject.cpp  TimeoutObject.h  meson.build
daemon/dbus-objects/adapters/: ConfigurationAdapter.h
daemon/service/: Service.cpp  Service.h  meson.build
daemon/serviceManager/: ServiceManager.cpp  ServiceManager.h  meson.build
data/: timeout.conf  timeout1.conf
dbus-objects/: BaseDbusObject.cpp  BaseDbusObject.h  TimeoutObject.cpp  meson.build
dbus-objects/adapters/: ConfigurationAdapter.h  configurationAdapter.xml
exceptions/: meson.build
service/: DirectoryIterator.h  Service.cpp  Service.h  meson.build
serviceManager/: ServiceManager.cpp  ServiceManager.h
uml/: scheme.drawio
wrappers/: BaseDbusObject.h  TimeoutObject.h
wrappers/objectStrategies/: BaseObjectStrategy.h  DefaultObjectStrategy.cpp  DefaultObjectStrategy.h
